--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>Babble — Talking gibberish with others</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <script type="text/javascript" src="library/jquery.js"></script>
     <script type="text/javascript" src="library/babble.js"></script>
   </head>
 
   <body>
-    <canvas id="babble" width="100%" height="100%" />
+    <canvas id="babble" width="100%" height="100%">
+      Your browser does not support the &lt;canvas&gt; tag!
+    </canvas>
   </body>
 </html>
