--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <head>
     <title>Babble — Talking gibberish with others</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link rel="stylesheet" href="stylesheets/default.css"/>
+
     <script type="text/javascript" src="library/jquery.js"></script>
     <script type="text/javascript" src="library/babble.js"></script>
   </head>
 
   <body>
-    <canvas id="babble" width="100%" height="100%">
+    <canvas id="babble" width="800" height="600">
       Your browser does not support the &lt;canvas&gt; tag!
     </canvas>
   </body>
