Wrote a few parts of the connection establishment.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="stylesheets/default.css"/>
 
     <script type="text/javascript" src="library/jquery.js"></script>
+    <script type="text/javascript" src="library/bmp/connection.js"></script>
+    <script type="text/javascript" src="library/bmp/package.js"></script>
     <script type="text/javascript" src="library/babble.js"></script>
+    <script type="text/javascript" src="library/main.js"></script>
   </head>
 
   <body>
