Fixed some minor glitches and added some rendition just for show and tell.

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="stylesheets/default.css"/>
 
-    <script type="text/javascript" src="library/jquery.js"></script>
-    <script type="text/javascript" src="library/bmp/connection.js"></script>
-    <script type="text/javascript" src="library/bmp/package.js"></script>
-    <script type="text/javascript" src="library/babble.js"></script>
-    <script type="text/javascript" src="library/main.js"></script>
+    <script type="text/javascript" src="scripts/jquery.js"></script>
+    <script type="text/javascript" src="scripts/bmp/connection.js"></script>
+    <script type="text/javascript" src="scripts/bmp/package.js"></script>
+    <script type="text/javascript" src="scripts/babble.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
   </head>
 
   <body>
-    <canvas id="babble" width="800" height="600">
+    <canvas id="babble" width="374" height="408">
       Your browser does not support the &lt;canvas&gt; tag!
     </canvas>
   </body>
