--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="stylesheets/default.css"/>
 
     <script type="text/javascript" src="scripts/jquery.js"></script>
-    <script type="text/javascript" src="scripts/bmp/connection.js"></script>
-    <script type="text/javascript" src="scripts/bmp/package.js"></script>
     <script type="text/javascript" src="scripts/babble.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
+    <script type="text/javascript" src="scripts/bmp/connection.js"></script>
+    <script type="text/javascript" src="scripts/bmp/package.js"></script>
+    <script type="text/javascript" src="scripts/entities/room.js"></script>
   </head>
 
   <body>
