--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="scripts/bmp/connection.js"></script>
     <script type="text/javascript" src="scripts/bmp/package.js"></script>
     <script type="text/javascript" src="scripts/entities/room.js"></script>
+    <script type="text/javascript" src="scripts/entities/user.js"></script>
   </head>
 
   <body>
