--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="scripts/bmp/package.js"></script>
     <script type="text/javascript" src="scripts/entities/room.js"></script>
     <script type="text/javascript" src="scripts/entities/user.js"></script>
+    <script type="text/javascript" src="scripts/entities/tile.js"></script>
   </head>
 
   <body>
